syntax = "proto3";

package KProtoSender;

option go_package = "aagmon/kafkaClientP/proto";

message PredictRequest{
    string recordID = 1;

    repeated float featuresVector = 4;

}



